spacing error resolved in footer and added icons in contact form

--- a/style.css
+++ b/style.css
@@ -160,11 +160,14 @@ button.cta{
   flex-direction: column;
   /* justify-content: center; */
   flex: 1;
-  align-items: center;
+  text-align: left;
+  width: 200px;
+  padding-left: 20px;
 }
 .footer-panel h4{
   color: white;
   font-size: 18px;
+  text-align: left;
   
 }
 .footer-panel p{
@@ -502,6 +505,20 @@ width: 40px;
     font-family: Arial, Helvetica, sans-serif;
     color: hsl(288, 75%, 14%);
 }
+.contact{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+.contact input{
+    height: 25px;
+    margin-bottom: 20px;
+}
+.contact-head{
+    font-size: 12px;
+    font-family: Arial, Helvetica, sans-serif;
+    color: hsl(288, 75%, 14%);
+}
 .msg{
     display: flex;
     flex-direction: column;
@@ -584,6 +601,10 @@ color: #d9d9df;
   font-size: 12px;
   padding-left: 2px;
   padding-right: 40px;
+}
+.footer-section{
+  display: flex;
+  flex-direction: column;
 }
 
 /*==============About Page Media Query==========================*/
@@ -745,6 +766,18 @@ font-size: 0.7rem;
     margin-bottom: 10px;
 }
 .email-head{
+    font-size: 10px;
+}
+.contact{
+    gap: 5px;
+    margin-left: 20px;
+}
+.contact input{
+    height: 20px;
+    width: 320px;
+    margin-bottom: 10px;
+}
+.contact-head{
     font-size: 10px;
 }
 .msg{
